# TAKESHI

./: .gitignore  README.md  SphinxInstall.md  cliente_GS_Coyo.sh  cliente_Gs.sh  gazeboInstall.sh  link_libraries.sh
GStreamer/: cliente_Gs.sh  cliente_Gs_wifi.sh
ToInstall/: JustinaSetupGPU.sh  Software_Installer(Melodic).sh  jackAudioInstall.sh  robot_packagesInstall_full.sh
ToInstall/utilities/: Alias_for_HSR.txt  jackAudioInstall.sh  link_libraries.sh  opencv_install.sh  rosKinetic_full_install.sh  tmc_packages_install.sh
catkin_ws/: package-lock.json
catkin_ws/.catkin_tools/profiles/default/: build.yaml
catkin_ws/install/: .rosinstall  setup.sh
catkin_ws/install/include/audio_msgs/: srvAngle.h  srvAngleRequest.h  srvAngleResponse.h
catkin_ws/install/include/bbros_bridge/: Default_BB_ROS_Bridge.h  Default_BB_ROS_BridgeRequest.h  Default_BB_ROS_BridgeResponse.h  Default_ROS_BB_Bridge.h  Default_ROS_BB_BridgeRequest.h  Default_ROS_BB_BridgeResponse.h  RecognizedSpeech.h  hd_lookat.h  hd_lookatRequest.h  hd_lookatResponse.h  hd_torque.h  hd_torqueRequest.h  hd_torqueResponse.h  mp_getclose.h  mp_getcloseRequest.h  mp_getcloseResponse.h  mp_getclose_xy.h  mp_getclose_xyRequest.h  mp_getclose_xyResponse.h  mp_getclose_xya.h  mp_getclose_xyaRequest.h  mp_getclose_xyaResponse.h  mp_move_dist.h  mp_move_distRequest.h  (+4 more)
catkin_ws/src/hardware/arm_camera/: CMakeLists.txt  package.xml
catkin_ws/src/hardware/arm_camera/src/: arm_camera.cpp
catkin_ws/src/hri/skeleton_follower/: CMakeLists.txt  package.xml
catkin_ws/src/hri/skeleton_follower/include/: skeleton_follower.h
catkin_ws/src/hri/skeleton_follower/launch/: skeleton_follower.launch
catkin_ws/src/hri/skeleton_follower/src/: skeleton_follower.cpp  skeleton_follower_node.cpp
catkin_ws/src/manipulation/hand_camera_manip/: CMakeLists.txt  package.xml
catkin_ws/src/manipulation/hand_camera_manip/include/hand_camera_manip/: grasp_srv.h
catkin_ws/src/manipulation/hand_camera_manip/launch/: takeshi_hand_camera.launch  takeshi_hand_camera_table.launch  takeshi_hand_demo.launch  takeshi_hand_server.launch  takeshi_hand_server_table.launch
catkin_ws/src/manipulation/hand_camera_manip/src/: camera_manip.cpp  camera_manip.h  camera_manip_node.cpp  grasp_srv.cpp  hand_grasp_srv.cpp
catkin_ws/src/neural_networks/face_recognition/: CMakeLists.txt  READMET.md  package.xml
catkin_ws/src/neural_networks/face_recognition/launch/: face_recognition.launch
catkin_ws/src/neural_networks/face_recognition/scripts/: face_recognition_node.py  face_recognition_node_backup.py  face_recognition_node_mio.py
catkin_ws/src/planning/act_pln/: CMakeLists.txt  package.xml
catkin_ws/src/planning/act_pln/msg/: virtualMsg.msg
catkin_ws/src/planning/act_pln/scripts/: smach_challenge.py  smach_challenge_coll.py
catkin_ws/src/planning/act_pln/src/: _gpsr_test.cpp  achy_breaky_heart.cpp  bring_me_test.cpp  carry_my_luggage.cpp  clean_up_2019.cpp  clean_up_test.cpp  clean_up_tester.cpp  demo_follow.cpp  demo_noviembre_18.cpp  demo_pick.cpp  demo_pick_novoice.cpp  eegpsr_test.cpp  final_robocup.cpp  final_tokio.cpp  final_tokio_simple.cpp  gpsr_test.cpp  handover_test.cpp  helpMeCarry_test.cpp  hsr_challenge.cpp  hsr_challenge_2020.cpp  hsr_challenge_back_up.cpp  monitor.cpp  open_Challenge_Takeshi_TMR2018.cpp  open_Challenge_montreal.cpp  pg_test.cpp  pg_test~  receptionist.cpp  restaurant.cpp  restaurant_canada.cpp  robot_inspection_TMR_2019.cpp  search_objects_online.cpp  serving_drinks_test.cpp  speech_person_test.cpp  storing_groseries_test.cpp  take_out_garbage.cpp  template.cpp  test.cpp  test_coyo.cpp  test_faces_osc.cpp  test_oscar.cpp  (+4 more)
catkin_ws/src/planning/act_pln/src/hand_me_that/: hand_me_that.cpp  interactive_clean_test.cpp  interactive_clean_test.h
catkin_ws/src/planning/act_pln/src/vr_hsr/: vr_robocup2019.cpp
catkin_ws/src/takeshi_start/: CMakeLists.txt
catkin_ws/src/test/: CMakeLists.txt  package.xml
catkin_ws/src/test/launch/: test_ltm_obj.launch
catkin_ws/src/test/src/: JustinaHardware_test.cpp  dk_moveit.cpp  find_objects_test.cpp  grasp_obj_test.cpp  hand_camera_manip.cpp  handover_test.cpp  ik_geometric.cpp  ik_moveit.cpp  ltm_obj_test.cpp  machine_state.cpp  manip_test.cpp  panoramic_test.cpp  robozoo_test.cpp  sm_template.cpp  speech_test.cpp
catkin_ws/src/vision/handle_detector/: CMakeLists.txt  package.xml
catkin_ws/src/vision/handle_detector/include/handle_detector/: handle_detector.h
catkin_ws/src/vision/handle_detector/launch/: file_handle_detector.launch  handle_detector.launch
catkin_ws/src/vision/handle_detector/src/: handle_detector.cpp  handle_detector_node.cpp  handle_detector_server.cpp
catkin_ws/src/vision/surf_recog/: CMakeLists.txt  package.xml
catkin_ws/src/vision/surf_recog/config/: coffe.xml  coffee.xml  coke.xml  ctrl.xml  dulce.xml  game.xml  lata.xml  marker.xml  ost.txt  ost.yaml  pumasbag.xml  pumasbagfront.xml  tin.xml  trained.xml  trainer.xml
catkin_ws/src/vision/surf_recog/launch/: takeshi_detector.launch  takeshi_trainer.launch  usb_cam_detect.launch  usb_cam_train.launch
catkin_ws/src/vision/surf_recog/src/: surf_detector.cpp  surf_detector.h  surf_detector_node.cpp  surf_trainer.cpp  surf_trainer.h  surf_trainer_node.cpp
catkin_ws/src/vision/vision_msgs/: CMakeLists.txt
catkin_ws/src/vision/vision_msgs/msg/: GestureSkeleton.msg  ObjectCoordinatesForDetection.msg  VisionFaceObject.msg  VisionFlattenedObject.msg  VisionFlattenedObjectList.msg  VisionObject.msg
catkin_ws/src/vision/vision_msgs/srv/: DetectHandles.srv  DetectObjectsInPlane.srv  FindPlane.srv  FindPlaneAtHeight.srv  HandCameraGrasp.srv  RecognizeFlattenedObjects.srv  Yolov3_detector.srv
catkin_ws/src/vision/yolo/: CMakeLists.txt  package.xml
catkin_ws/src/vision/yolo/src/: yolo_node.cpp  yolo_node.h
docs/: Makefile  conf.py  make.bat
docs/_build/doctrees/: environment.pickle
docs/_build/html/: objects.inv
docs/html/: arm__node_8cpp__incl.map  files.html  globals_func.html  index.html  search.html
docs/html/.doctrees/: environment.pickle
docs/source/: conf.py  index.rst
(+1196 files in other folders)
