<?xml version="1.0"?>
<package>
  <name>yolo_v3</name>
  <version>0.0.0</version>
  <description>Yolo package</description>

  <maintainer email="edd@todo.todo">robocup</maintainer>


 <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>vision_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>takeshi_tools</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>vision_msgs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>takeshi_tools</run_depend>

  <export>
  
  </export>
</package>
